Fixing Loading Issue + Added Black Highlight
Just added a <script> tag right after header. Because HTML loads from
top to bottom, adding the <script> tag afterward, fixes it directly
afterward. The issue issue with having shouldResize()in the head tag is
that the header hasn’t event loaded so it’s invisible to the DOM (I
think). Whatever, it works now.

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -144,6 +144,7 @@ header h2 {
 }
 
 #content-wrapper {
+    margin:0;
     border-top: solid 1px #fff;
     width:100%;
     float:left;
@@ -265,10 +266,10 @@ pre code {
     padding: 0;
 }
 code::selection{
-    background-color:rgba(0,255,0,0.7)
+    background-color:rgba(0,0,0,1);
 }
 code::-moz-selection{
-    background-color:rgba(0,255,0,0.7)
+    background-color:rgba(0,0,0,1);
 }
 
 ul, ol, dl {
